--- a/manuscript/vazul_functionality.Rmd
+++ b/manuscript/vazul_functionality.Rmd
@@ -123,16 +123,16 @@ The `mask_variables_rowwise()` function applies consistent masking within each r
 
 ```{r}
 df <- data.frame(
-  treat_1 = c("control", "treatment_1", "treatment_2", "control"),
-  treat_2 = c("treatment_1", "treatment_2", "control", "control"),
-  treat_3 = c("treatment_2", "control", "treatment_1", "control"),
-  id = 1:4
+  treat_1 = c("control", "treatment_1", "treatment_2"),
+  treat_2 = c("treatment_1", "treatment_2", "control"),
+  treat_3 = c("treatment_2", "control", "treatment_1"),
+  treat_4 = c("treatment_2", "control", "treatment_1"),
+  id = 1:3
 )
 
 mask_variables_rowwise(df, starts_with("treat_"))
 
 ```
-
 
 ## Scrambling functions
 
