improved introduction based on round 1 feedback

--- a/inst/bibliography.bib
+++ b/inst/bibliography.bib
@@ -1,3 +1,145 @@
+@article{MARP2022discussion,
+  title = {A Many-Analysts Approach to the Relation between Religiosity and Well-Being: {{Reflection}} and Conclusion},
+  author = {Hoogeveen, Suzanne and Sarafoglou, Alexandra and {van Elk}, Michiel and Wagenmakers, Eric-Jan},
+  journal={Religion, Brain \& Behavior},
+  volume={13},
+  number={3},
+  pages={356--363},
+  year={2023},
+  journal = {Religion, Brain, \& Behaviour},
+  doi={10.1080/2153599X.2022.2070263}
+}
+@article{baker2016scientists,
+  title={1,500 scientists lift the lid on reproducibility},
+  author={Baker, Monya},
+  journal={Nature News},
+  volume={533},
+  pages={452},
+  year={2016},
+  doi = {10.1038/533452a},
+}
+@incollection{gelman2016statistical,
+  title={The statistical crisis in science},
+  author={Gelman, Andrew and Loken, Eric},
+  editor={Pitici, Mircea},
+  booktitle={The best writing on mathematics},
+  volume={102},
+  pages={305--318},
+  year={2016},
+  publisher={Princeton University Press}
+}
+@article{ioannidis2005most,
+  title={Why most published research findings are false},
+  author={Ioannidis, John PA},
+  journal={PLoS medicine},
+  volume={2},
+  number={8},
+  pages={e124},
+  year={2005},
+  doi={10.1371/journal.pmed.1004085},
+  publisher={Public Library of Science}
+}
+@article{mcshane2024statistical,
+  title={``Statistical Significance'' and Statistical Reporting: Moving Beyond Binary},
+  author={McShane, Blakeley B and Bradlow, Eric T and Lynch Jr, John G and Meyer, Robert J},
+  journal={Journal of Marketing},
+  pages={00222429231216910},
+  year={2024},
+  doi={10.1177/00222429231216910},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+@article{savitz2024responding,
+  title={Responding to Reviewers and Editors About Statistical Significance Testing},
+  author={Savitz, David A and Wise, Lauren A and Bond, Julia C and Hatch, Elizabeth E and Ncube, Collette N and Wesselink, Amelia K and Willis, Mary D and Yland, Jennifer J and Rothman, Kenneth J},
+  journal={Annals of Internal Medicine},
+  year={2024},
+  volume={177},
+  doi={10.7326/M23-2430},
+  pages={385--386},
+  publisher={American College of Physicians}
+}
+@article{muradchanian2021best,
+  title={How best to quantify replication success? {A} simulation study on the comparison of replication success metrics},
+  author={Muradchanian, Jasmine and Hoekstra, Rink and Kiers, Henk and van Ravenzwaaij, Don},
+  journal={Royal Society Open Science},
+  volume={8},
+  doi={10.1098/rsos.201697},
+  pages={201697},
+  year={2021},
+  publisher={The Royal Society}
+}
+@article{gilbert2016,
+  author = {Daniel T. Gilbert  and Gary King  and Stephen Pettigrew  and Timothy D. Wilson },
+  title = {Comment on ``Estimating the reproducibility of psychological science''},
+  journal = {Science},
+  volume = {351},
+  number = {6277},
+  pages = {1037-1037},
+  year = {2016},
+  doi = {10.1126/science.aad7243}
+}
+@article{camerer2016evaluating,
+  title={Evaluating replicability of laboratory experiments in economics},
+  author={Camerer, Colin F and Dreber, Anna and Forsell, Eskil and Ho, Teck-Hua and Huber, J{\"u}rgen and Johannesson, Magnus and Kirchler, Michael and Almenberg, Johan and Altmejd, Adam and Chan, Taizan and others},
+  journal={Science},
+  volume={351},
+  number={6280},
+  pages={1433--1436},
+  year={2016},
+  doi={10.1126/science.aaf0918},
+  publisher={American Association for the Advancement of Science}
+}
+@article{pashler2012editors,
+  title={Editors' introduction to the special section on replicability in psychological science: {A} crisis of confidence?},
+  author={Pashler, Harold and Wagenmakers, Eric-Jan},
+  journal={Perspectives on Psychological Science},
+  volume={7},
+  pages={528--530},
+  year={2012},
+  doi = {10.1177/1745691612465253},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+@article{nosek2022replicability,
+  title={Replicability, robustness, and reproducibility in psychological science},
+  author={Nosek, Brian A and Hardwicke, Tom E and Moshontz, Hannah and Allard, Aur{\'e}lien and Corker, Katherine S and Dreber, Anna and Fidler, Fiona and Hilgard, Joe and Kline Struhl, Melissa and Nuijten, Mich{\`e}le B and others},
+  journal={Annual review of psychology},
+  volume={73},
+  pages={719--748},
+  year={2022},
+  doi = {10.1146/annurev-psych-020821-114157},
+  publisher={Annual Reviews}
+}
+@article{cockburn2020threats,
+  title={Threats of a replication crisis in empirical computer science},
+  author={Cockburn, Andy and Dragicevic, Pierre and Besan{\c{c}}on, Lonni and Gutwin, Carl},
+  journal={Communications of the ACM},
+  volume={63},
+  number={8},
+  pages={70--79},
+  year={2020},
+  doi={10.1145/3360311},
+  publisher={ACM New York, NY, USA}
+}
+@article{open2015estimating,
+  AUTHOR =       {{Open Science Collaboration}},
+  TITLE =        {Estimating the Reproducibility of Psychological Science},
+  JOURNAL =      {Science},
+  doi = {10.1126/science.aac4716},
+  YEAR =         {2015},
+  volume =       {349},
+  pages =        {{aac4716}},
+}
+@article{ioannidis2005contradicted,
+  title={Contradicted and initially stronger effects in highly cited clinical research},
+  author={Ioannidis, John PA},
+  journal={JAMA},
+  volume={294},
+  number={2},
+  pages={218--228},
+  year={2005},
+  doi={10.1001/jama.294.2.218},
+  publisher={American Medical Association}
+}
 @article{pfadt2025practicesPreprint,
   title={Methodological Metamorphosis: {The} Rapid Rise of {Bayesian} Inference and Open Science Practices in Psychology},
     author = {Pfadt, M. Julius. and Barto{\v{s}}, Franti{\v{s}}ek and Godmann, R. Henrik. and Waaijers, Meike and Groot, Laura and Heo, Ihnwhi and Mensink, Lotte and Nak, Jason and de Ruiter, P. Jan. and Sarafoglou, Alexandra and Siepe, Bj{\"o}rn and Arena, Giuseppe and Akrong, Emma and Aust, Frederik and van den Bergh, Don and Brenner, Wilhelmine and Doekemeijer, Roos and Donzallaz, C. Michelle and van Doorn, Johnny and Orme{\~n}o Echevarria, Nicol{\'a}s and Finneman, Adam and Geller, Gali and Hato, Tuba and Koskinen, Emily and Krijgsman, Bruny and Kulbe, Lars and L{\"u}ken, Malte and Marsman, Maarten and Ott, L. Vincent and Pawel, Samuel and Piestrak, Olga and de Ron, Jill and Sekulovski, Nikola and Serry, Marlene and Stefan{\'o}w, Alan and Stevenson, Niek and Sadowski, Bartek and Sopuch, M{\'\i}ra and Vasileiou, Antreas and Visser, Ingmar and V{\"o}ller, Marcell and Wiechert, Sera and de Wit, Kay and Wuth, Julian and Wagenmakers, Eric-Jan},
@@ -6,11 +148,11 @@
   doi = {10.31234/osf.io/ck3js_v1}
 }
 @article{wicherts2016degrees,
-    AUTHOR={Wicherts, Jelte M. and Veldkamp, Coosje L. S. and Augusteijn, Hilde E. M. and Bakker, Marjan and van Aert, Robbie C. M. and van Assen, Marcel A. L. M.},   
+    AUTHOR={Wicherts, Jelte M. and Veldkamp, Coosje L. S. and Augusteijn, Hilde E. M. and Bakker, Marjan and van Aert, Robbie C. M. and van Assen, Marcel A. L. M.},
     TITLE={Degrees of Freedom in Planning, Running, Analyzing, and Reporting Psychological Studies: {A} Checklist to Avoid p-Hacking},
-    JOURNAL={Frontiers in Psychology},      
-    VOLUME={7},      
-    PAGES={1832},     
+    JOURNAL={Frontiers in Psychology},
+    VOLUME={7},
+    PAGES={1832},
     YEAR={2016},
     doi={10.3389/fpsyg.2016.01832}
 }
@@ -19,9 +161,10 @@
   editor =       {Lilienfeld, S. O. and Waldman, I.},
   booktitle =    {Psychological Science Under Scrutiny: {R}ecent Challenges and Proposed Solutions},
   title =        {Blind Analysis as a Correction for Confirmatory Bias in Physics and in Psychology},
-    pages={297--322},
+  pages={297--322},
   PUBLISHER =    {John Wiley and Sons},
   YEAR =         {2018},
+  doi={10.1002/9781119095910.ch15},
 }
 
 @incollection{maccoun2021removebiases,
@@ -41,7 +184,6 @@
   volume={526},
   doi={10.1038/526187a},
   pages={187--190},
-  doi={10.1038/526187a},
   year={2015}
 }
 @incollection{burger2022network,
@@ -169,13 +311,13 @@
   publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
 @article{simmons2011false,
-author = {Simmons, J.P. and Nelson, L.N and Simonsohn, U.},
-title ={False--positive Psychology: {U}ndisclosed Flexibility in Data Collection and Analysis Allows Presenting Anything as Significant},
-journal = {Psychological Science},
-volume = {22},
-pages = {1359--1366},
-doi={10.1177/0956797611417632},
-year = {2011}
+  author = {Simmons, J.P. and Nelson, L.N and Simonsohn, U.},
+  title ={False--positive Psychology: {U}ndisclosed Flexibility in Data Collection and Analysis Allows Presenting Anything as Significant},
+  journal = {Psychological Science},
+  volume = {22},
+  pages = {1359--1366},
+  doi={10.1177/0956797611417632},
+  year = {2011}
 }
 @article{vandenakker2024potential,
 	title = {The potential of preregistration in psychology: {Assessing} preregistration producibility and preregistration-study consistency},
@@ -211,6 +353,40 @@ year = {2011}
   year={2021},
   doi={10.3233/DS-210031},
   publisher={SAGE Publications Sage UK: London, England}
+}
+@article{schulz2002blinding,
+  title={Blinding in randomised trials: {Hiding} who got what},
+  author={Schulz, Kenneth F and Grimes, David A},
+  journal={The Lancet},
+  volume={359},
+  number={9307},
+  pages={696--700},
+  year={2002},
+  publisher={Elsevier}
+}
+@book{pocock2013clinical,
+  title={Clinical trials: {A} practical approach},
+  author={Pocock, Stuart J},
+  year={2013},
+  publisher={John Wiley \& Sons}
+}
+@article{aczel2020transparency,
+  AUTHOR =       {Aczel, B. and Szaszi, B. and Sarafoglou, A. and Kekecs, Z. and Kucharsk\'{y}, \v{S} and Benjamin, D. and Chambers, C. D. and
+Fisher, A. and Gelman, A. and Gernsbacher, M. A. and Ioannidis, J. P. and Johnson, E. and Jonas, K. and Kousta, S. and
+Lilienfeld, S. O. and Lindsay, D. S. and Morey, C. C. and Munaf\`{o}, M. and Newell, B. R. and Pashler, H. and
+Shanks, D. R. and Simons, D. J. and Wicherts, J. M. and Albarracin, D. and Anderson, N. D. and Antonakis, J. and
+Arkes, H. and Back, M. D. and Banks, G. C. and Beevers, C. and Bennett, A. A. and Bleidorn, W. and Boyer, T. W. and
+Cacciari, C. and Carter, A. S. and Cesario, J. and Clifton, C. and Conroy, R. M. and Cortese, M. and Cosci, F. and
+Cowan, N. and Crawford, J. and Crone, E. A. and Curtin, J. and Engle, R. and Farrell, S. and Fearon, P. and
+Fichman, M. and Frankenhuis, W. and Freund, A. M. and Gaskell, M. G. and Giner--Sorolla, R. and Green, D. P. and Greene, R.
+L. and Harlow, L. L. and Hoces de la Guardia, F. and Isaacowitz, D. and Kolodner, J. and Lieberman, D. and Logan, G. D. and
+Mendes, W. B. and Moersdorf, L. and Nyhan, B. and Pollack, J. and Sullivan, C. and Vazire, S. and Wagenmakers, Eric-Jan},
+  TITLE =        {A Consensus-Based Transparency Checklist},
+  JOURNAL =      {Nature Human Behaviour},
+  YEAR =         {2020},
+  volume =       {4},
+  doi =          {10.1038/s41562-019-0772-6},
+  pages =        {4--6},
 }
 
 
